prusti-tests/tests/runtime_checks/fail/predicates/abstract-error.stderr
error: Abstract predicates can not be runtime checked
 --> $DIR/abstract-error.rs:7:5
  |
7 | /     #[insert_runtime_check]
8 | |     fn some_abstract_predicate(x: i32) -> bool;
  | |_______________________________________________^

error: aborting due to previous error

